Added query filtering and documentation: tested on Postman & Swagger UI
