# src/middleware/validateTask.js
@@ -1,4 +1,4 @@
-import { body } from 'express-validator';
+import { body, query } from 'express-validator';
 import { checkValidationResults } from './handleValidationErrors.js';
 
 export const validateTask = [
@@ -16,5 +16,13 @@ export const validateTask = [
     .isBoolean()
     .withMessage('completed must be true or false'),
 
+  checkValidationResults,
+];
+
+export const validateGetTasks = [
+  query('completed')
+    .optional()
+    .isIn(['true', 'false'])
+    .withMessage('completed must be true or false'),
   checkValidationResults,
 ];
